# furiganalize_epub_interactive

./: .gitignore  LICENSE  Makefile  README.md  dune-project  furiganalize_epub_interactive.opam
.github/workflows/: build.yml
lib/: dune
src/: annot.ml  dune
