(lang dune 3.12)

(name furiganalize_epub_interactive)

(generate_opam_files true)

(source
 (github haoxuany/furiganalize_epub_interactive))

(authors "Haoxuan (Aaron) Yue")

(maintainers "yuehaoxuanar@yahoo.com.sg")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name furiganalize_epub_interactive)
 (synopsis "Annotate EPUB books with furigana")
 (description "A rewrite of the original furiganalize-epub implementation in OCaml with some extra features")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
